[gd_scene load_steps=2 format=3 uid="uid://bbqpypea0tub"]

[ext_resource type="Script" uid="uid://dkyn53a03dgb5" path="res://home_menu.gd" id="1_jwaq6"]

[node name="homeMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 647.0
script = ExtResource("1_jwaq6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 263.0
offset_right = 725.0
offset_bottom = 525.0

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "PLAY
"

[node name="Continue" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "CONTINUE"

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "OPTIONS
"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUIT
"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="play_game"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="options_game"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="quit_game"]
